<resources>
    <string name="about_album_label">About %s</string>
    <string name="youtube_download_audio">Audio MP3</string>
    <string name="youtube_download_video">Video (Calidad)</string>
    <string name="youtube_url_hint">YouTube URL</string>
    <string name="select_quality">Seleccionar calidad de video</string>
    <string name="video_editor">Editor de Video</string>
    <string name="supported_formats">mkv,mp4,flac,opus,gif</string>
    <string name="pause">Pause</string>
    <string name="play">Play</string>
    <string name="unir_videos_title">¿Unir estos %d videos?</string>
    <string name="unir_videos_message">Se unirán en este orden:\n\n%s\n\nEl resultado se guardará en Downloads.</string>
    <string name="incrustar_subtitulos_title">¿Incrustar subtítulos?</string>
    <string name="incrustar_subtitulos_message">Se quemarán los subtítulos cargados en el video actual. El resultado se guardará en Descargas.</string>
    <string name="calidad_mp3">Calidad del MP3</string>
    <string name="procesando_archivo">Procesando archivo&#8230;</string>
    <string name="procesando_porcentaje">Procesando&#8230; %d%%</string>
    <string name="error_al_unir">Error al unir videos (revisa Logcat)</string>
    <string name="error_preparando_archivos">Error preparando los archivos</string>
    <string name="error_al_leer_subtitulos">Error al leer subtítulos</string>
    <string name="subtitulos_cargados">Subtítulos cargados</string>
    <string name="permiso_denegado_videos">Permiso denegado, no podemos cargar videos</string>
    <string name="selecciona_video_y_subtitulos">Selecciona video y subtítulos</string>
    <string name="carga_video_primero">Carga un video primero</string>
    <string name="selecciona_video_y_srt">Selecciona un video y carga un .srt primero (SRT)</string>
    <string name="incrustando_subtitulos_msg">Incrustando subtítulos, puede tardar...</string>
    <string name="no_hay_subtitulos_msg">No hay subtítulos cargados para incrustar</string>
    <string name="creando_slideshow_msg">Creando video desde %d fotos...</string>
    <string name="clip_guardado">Clip guardado en Downloads</string>
    <string name="guardado_en_downloads">Guardado en Downloads</string>
    <string name="error_en_ffmpeg">Error en FFmpeg</string>
    <string name="error_al_cortar">Error al cortar</string>
    <string name="creando_gif_msg">Creando GIF, puede tardar...</string>
    <string name="agregando_audio_msg">Agregando audio al video...</string>
    <string name="error_al_agregar_audio">Error al agregar audio (revisa Logcat)</string>
    <string name="unir_videos">UNIR\nVIDEOS</string>
    <string name="cortar_video">CORTAR\nVIDEO</string>
    <string name="crear_mkv">CREAR\nMKV</string>
    <string name="cargar_mp3">CARGAR\nMP3</string>
    <string name="elegir_srt">ELEGIR\nSRT</string>
    <string name="elegir_video">ELEGIR\nVIDEO</string>
    <string name="elegir_carpeta">ELEGIR\nCARPETA</string>
    <string name="convertidor_mp3">CONVERTIDOR MP3</string>
    <string name="incrustar_sub">INCRUSTAR\nSUB</string>
    <string name="fotos_a_video">FOTOS A\nVIDEO</string>
    <string name="video_a_gif">VIDEO A\nGIF</string>
    <string name="editor_tags">EDITOR\nTAGS</string>
    <string name="youtube_mp3">YOUTUBE\nMP3</string>
    <string name="prev">PREV</string>
    <string name="next">NEXT</string>
    <string name="inicio">Inicio</string>
    <string name="fin">Fin</string>
    <string name="open_bracket">[</string>
    <string name="close_bracket">]</string>
    <string name="zero_time">00:00</string>
    <string name="about_settings_summary">Team, social links</string>
    <string name="accent_color">Accent color</string>
    <string name="accent_color_desc">The theme accent color, defaults to purple</string>
    <string name="action_about">About</string>
    <string name="action_add_to_blacklist">Add to Blacklist</string>
    <string name="action_add_to_favorites">Add to favorites</string>
    <string name="action_add_to_playing_queue">Add to playing queue</string>
    <string name="action_add_to_playlist">Add to playlist</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_cast">Cast</string>
    <string name="action_clear_playing_queue">Clear playing queue</string>
    <string name="action_cycle_repeat">Cycle repeat mode</string>
    <string name="action_delete">Delete</string>
    <string name="action_delete_from_device">Delete from device</string>
    <string name="action_details">Details</string>
    <string name="action_edit">Edit</string>
    <string name="action_go_to_album">Go to album</string>
    <string name="action_go_to_artist">Go to artist</string>
    <string name="action_go_to_genre">Go to genre</string>
    <string name="action_go_to_lyrics">Go to Lyrics</string>
    <string name="action_go_to_start_directory">Go to start directory</string>
    <string name="action_grant">Grant</string>
    <string name="action_grid_size">Grid size</string>
    <string name="action_grid_size_land">Grid size (land)</string>
    <string name="action_new_playlist">New playlist</string>
    <string name="action_next">Next</string>
    <string name="action_play">Play</string>
    <string name="action_play_all">Play all</string>
    <string name="action_play_next">Play next</string>
    <string name="action_play_pause">Play/Pause</string>
    <string name="action_previous">Previous</string>
    <string name="action_remove_from_favorites">Remove from favorites</string>
    <string name="action_remove_from_playing_queue">Remove from playing queue</string>
    <string name="action_remove_from_playlist">Remove from playlist</string>
    <string name="action_rename">Rename</string>
    <string name="action_save_playing_queue">Save playing queue</string>
    <string name="action_scan">Scan</string>
    <string name="action_search">Search</string>
    <string name="action_set">Start</string>
    <string name="action_set_as_ringtone">Set as ringtone</string>
    <string name="action_set_as_start_directory">Set as start directory</string>
    <string name="action_settings">"Settings"</string>
    <string name="action_share">Share</string>
    <string name="action_shuffle_all">Shuffle all</string>
    <string name="action_shuffle_playlist">Shuffle playlist</string>
    <string name="action_sleep_timer">Sleep timer</string>
    <string name="action_sort_order">Sort order</string>
    <string name="action_tag_editor">Tag editor</string>
    <string name="action_toggle_favorite">Toggle favorite</string>
    <string name="action_toggle_shuffle">Toggle shuffle mode</string>
    <string name="adaptive">Adaptive</string>
    <string name="add_action">Add</string>
    <string name="add_playlist_title">"Add to playlist"</string>
    <string name="add_time_framed_lryics">Add Time Framed Lyrics</string>
    <string name="added_song_count_to_playlist">Added %1$d song(s) to %2$s</string>
    <string name="added_title_to_playing_queue">"Added 1 title to the playing queue."</string>
    <string name="added_x_titles_to_playing_queue">Added %1$d titles to the playing queue.</string>
    <string name="album">Album</string>
    <plurals name="albumSongs">
        <item quantity="one">Song</item>
        <item quantity="other">Songs</item>
    </plurals>
    <string name="album_artist">Album Artist</string>
    <plurals name="albums">
        <item quantity="one">Album</item>
        <item quantity="other">Albums</item>
    </plurals>
    <string name="always">Always</string>
    <string name="app_share">Hey check out this cool music player at: https://play.google.com/store/apps/details?id=%s</string>
    <string name="app_shortcut_shuffle_all_short">Shuffle</string>
    <string name="app_shortcut_top_tracks_short">Top Tracks</string>
    <string name="app_widget_big_name">Full Image</string>
    <string name="app_widget_card_name">Card</string>
    <string name="app_widget_classic_name">Classic</string>
    <string name="app_widget_md3_name">MD3</string>
    <string name="app_widget_small_name">Small</string>
    <string name="app_widget_text_name">Minimal Text</string>
    <string name="artist">Artist</string>
    <string name="artists">Artists</string>
    <string name="audio_fade_duration">Audio fade duration</string>
    <string name="audio_focus_denied">Audio focus denied.</string>
    <string name="audio_settings_summary">Change the sound settings and adjust the equalizer controls</string>
    <string name="auto">Auto</string>
    <string name="backup_restore_settings_summary">Backup and restore your settings, playlists</string>
    <string name="backup_restore_title">
        <![CDATA[Backup & Restore]]>
    </string>
    <string name="backup_title">Backups</string>
    <string name="biography">Biography</string>
    <string name="black_theme_name">Just Black</string>
    <string name="blacklist">Blacklist</string>
    <string name="bluetooth_summary">The app needs nearby devices permission to check for bluetooth devices</string>
    <string name="bluetooth_title">Nearby devices</string>
    <string name="blur">Blur</string>
    <string name="blur_card">Blur Card</string>
    <string name="bug_report_failed">Unable to send report</string>
    <string name="bug_report_failed_invalid_token">Invalid access token. Please contact the app developer.</string>
    <string name="bug_report_failed_issues_not_available">Issues are not enabled for the selected repository. Please contact the app developer.</string>
    <string name="bug_report_failed_unknown">An unexpected error occurred. Please contact the app developer.</string>
    <string name="bug_report_failed_wrong_credentials">Wrong username or password</string>
    <string name="bug_report_issue">Issue</string>
    <string name="bug_report_manual">Send manually</string>
    <string name="bug_report_no_description">Please enter an issue description</string>
    <string name="bug_report_no_password">Please enter your valid GitHub password</string>
    <string name="bug_report_no_title">Please enter an issue title</string>
    <string name="bug_report_no_username">Please enter your valid GitHub username</string>
    <string name="bug_report_success">Bug report successful</string>
    <string name="bug_report_summary">An unexpected error occurred. Sorry you found this bug, if it keeps crashing \"Clear app data\" or send an Email </string>
    <string name="bug_report_use_account">Send using GitHub account</string>
    <string name="buy_now">Buy now</string>
    <string name="cancel_current_timer">Cancel</string>
    <string name="card">Card</string>
    <string name="card_color_style">Colored Card</string>
    <string name="card_square">Square Card</string>
    <string name="card_style">Card</string>
    <string name="carousal_effect_on_now_playing_screen">Carousel effect on the now playing screen</string>
    <string name="cascading">Cascading</string>
    <string name="changelog">Changelog</string>
    <string name="changelog_summary">Check out What\'s New</string>
    <string name="choose_image">Choose Image</string>
    <string name="choose_restore_title">Choose what to restore</string>
    <string name="circle">Circle</string>
    <string name="circular">Circular</string>
    <string name="classic">Classic</string>
    <string name="clear_action">Clear</string>
    <string name="clear_blacklist">Clear blacklist</string>
    <string name="clear_history">Clear History</string>
    <string name="clear_playing_queue">Clear queue</string>
    <string name="color">Color</string>
    <string name="colors">Colors</string>
    <string name="compact">Compact</string>
    <string name="composer">Composer</string>
    <string name="copied_device_info_to_clipboard">Copied device info to clipboard.</string>
    <string name="could_not_create_playlist">Couldn\u2019t create playlist.</string>
    <string name="could_not_download_album_cover">"Couldn\u2019t download a matching album cover."</string>
</resources>